--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,16 +1,100 @@
-.controls {
+@charset "utf-8";
+
+@import url(./reset.css);
+
+.container {
+    width: min(100% - 30px, 1080px);
+    margin-inline: auto;
+}
+
+/* ------------------Main style------------------ */
+/* ---------------------------------------------- */
+
+main {
+    height: 100%;
+}
+
+.shape-factory {
+    height: 100%;
+}
+
+.factory {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.factory h1 {
+    color: #fff;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 100px);
-    gap: 10px;
+select {
+    color: #fff;
+    background-color: #272A31;
+    width: 210px;
+    height: 46px;
+    padding: 0 12px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.shape {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+select + select {
+    margin-left: 15px;
+}
+
+option {
+    color: #fff;
+}
+
+input {
+    height: 46px;
+    padding: 0 20px;
+    border-radius: 4px;
+    background-color: #FF7B00;
+    color: #fff;
+    font-weight: 500;
+    margin-left: 15px;
     cursor: pointer;
+    transition: all 0.3s ease-out;
+    width: 90px;
+}
+
+input:hover {
+    background-color: #e06c00;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(6, 80px); 
+    grid-template-rows: repeat(4, 92.4px);
+    gap: 10px;
+    background-color: #272A31;
+    border-radius: 4px;
+    padding: 10px;
+    transform: rotateX(150deg);
+}
+
+.grid-container div {
+    cursor: pointer;
+}
+
+.factory-info {
+    color: #fff;
+    line-height: 0;
+}
+
+.circle {
+    border-radius: 50%;
+}
+
+.clear {
+    background-color: #CC231E;
+}
+
+.clear:hover {
+    background-color: #b3201b;
 }
